<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.MainDetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.florent37.arclayout.ArcLayout
            android:id="@+id/backdrop_arc"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:arc_cropDirection="cropOutside"
            app:arc_height="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop">

            <ImageView
                android:id="@+id/movie_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_backdrop"
                android:scaleType="centerCrop" />

        </com.github.florent37.arclayout.ArcLayout>

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="@dimen/image_width_small"
            android:layout_height="@dimen/image_height_small"
            android:layout_marginStart="16dp"
            android:layout_marginTop="168dp"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/backdrop_arc" />

        <ImageView
            android:id="@+id/favourites_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/favourite_button"
            android:src="@drawable/ic_baseline_star_border_24px"
            android:tint="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/backdrop_arc" />

        <TextView
            android:id="@+id/tv_movie_title"
            style="@style/TextTheme"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/favourites_button"
            app:layout_constraintTop_toBottomOf="@+id/favourites_button" />

        <TextView
            android:id="@+id/tv_release_date"
            style="@style/TextTheme"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_title"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

        <TextView
            style="@style/DetailTextTheme"
            android:text="@string/year_label"
            app:layout_constraintStart_toStartOf="@+id/tv_release_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

        <RatingBar
            android:id="@+id/tv_vote_average"
            style="?android:ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:isIndicator="true"
            android:rating="5"
            app:layout_constraintStart_toEndOf="@+id/tv_release_date"
            app:layout_constraintTop_toTopOf="@+id/tv_release_date" />

        <TextView
            android:id="@+id/rating_label"
            style="@style/DetailTextTheme"
            android:layout_marginTop="6dp"
            android:text="@string/rating_label"
            app:layout_constraintStart_toStartOf="@+id/tv_vote_average"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average" />

        <TextView
            android:id="@+id/tv_overview_label"
            style="@style/LabelTextTheme"
            android:text="@string/synopsis_label"
            app:layout_constraintTop_toBottomOf="@+id/rating_label" />

        <com.ms.square.android.expandabletextview.ExpandableTextView
            android:id="@+id/tv_overview"
            style="@style/TextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingLeft="@dimen/item_padding_16"
            android:paddingRight="@dimen/item_padding_16"
            android:textSize="16sp"
            app:animDuration="200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_label"
            app:maxCollapsedLines="4">

            <TextView
                android:id="@id/expandable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16sp" />

            <ImageButton
                android:id="@id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="@android:color/transparent"
                android:contentDescription="@string/show_more"
                android:padding="2dp" />

        </com.ms.square.android.expandabletextview.ExpandableTextView>

        <TextView
            android:id="@+id/trailer_label"
            style="@style/LabelTextTheme"
            android:text="@string/trailers_label"
            app:layout_constraintTop_toBottomOf="@id/tv_overview" />

        <HorizontalScrollView
            android:id="@+id/trailers_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trailer_label"
            tools:layout_editor_absoluteY="326dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/trailer_1"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:visibility="gone"
                        android:contentDescription="@string/movie_trailer"
                        android:src="@drawable/ic_play_circle_outline_black_24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="1.0" />

                    <ImageView
                        android:id="@+id/share_trailer"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/share"
                        android:src="@drawable/ic_baseline_share_24px" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/trailer_2"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/movie_trailer"
                    android:src="@drawable/ic_play_circle_outline_black_24dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageButton
                    android:id="@+id/trailer_3"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/movie_trailer"
                    android:src="@drawable/ic_play_circle_outline_black_24dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/reviews_label"
            style="@style/LabelTextTheme"
            android:text="@string/reviews_label"
            app:layout_constraintTop_toBottomOf="@id/trailers_scroll_view" />

        <LinearLayout
            android:id="@+id/reviews_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviews_label">

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/tv_review1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingLeft="@dimen/item_padding_16"
                android:paddingRight="@dimen/item_padding_16"
                expandableTextView:animDuration="200"
                expandableTextView:maxCollapsedLines="2">

                <TextView
                    android:id="@id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/show_more"
                    android:padding="2dp" />
            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/tv_review2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingLeft="@dimen/item_padding_16"
                android:paddingRight="@dimen/item_padding_16"
                expandableTextView:animDuration="200"
                expandableTextView:maxCollapsedLines="2">

                <TextView
                    android:id="@id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/show_more"
                    android:padding="2dp" />
            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/tv_review3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingLeft="@dimen/item_padding_16"
                android:paddingRight="@dimen/item_padding_16"
                expandableTextView:animDuration="200"
                expandableTextView:maxCollapsedLines="2">

                <TextView
                    android:id="@id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/show_more"
                    android:padding="2dp" />
            </com.ms.square.android.expandabletextview.ExpandableTextView>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>